--- a/BookStore-UI/Shared/NavMenu.razor
+++ b/BookStore-UI/Shared/NavMenu.razor
@@ -7,11 +7,7 @@
 
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <ul class="nav flex-column">
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </li>
+
         <AuthorizeView>
             <Authorized>
                 <li class="nav-item px-3">
@@ -24,7 +20,15 @@
                         <span class="oi oi-account-logout" aria-hidden="true"></span> Logout
                     </NavLink>
                 </li>
-
+            </Authorized>
+        </AuthorizeView>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> Home
+            </NavLink>
+        </li>
+        <AuthorizeView>
+            <Authorized>
                 <li class="nav-item px-3">
                     <NavLink class="nav-link" href="authors">
                         <span class="oi oi-plus" aria-hidden="true"></span> Authors
