complted author curd opertion with book linking

--- a/BookStore-UI/Pages/Users/Login.razor
+++ b/BookStore-UI/Pages/Users/Login.razor
@@ -1,18 +1,18 @@
 ﻿@page "/login"
 
-@using BookStore_UI.Models
-@using BookStore_UI.Contracts
 
 @inject IAuthenticationRepository _authRepo
 @inject NavigationManager _navManager
 
-<div class="card">
-    <h3 class="card-title">Login</h3>
+
+
+    <PageTitle Title="Login" />
     @if (!response)
     {
-        <div class="alert alert-danger">
-            <p>Something went wrong with the login attempt</p>
-        </div>
+
+            <LoadingMessage Message= "Something went wrong with the login attempt"/>
+
+       
     }
     <div class="card-body">
         <EditForm Model="Model" OnValidSubmit="logmein">
@@ -33,7 +33,7 @@
 
         </EditForm>
     </div>
-</div>
+
 
 @code {
     private LoginModel Model = new LoginModel();
