--- a/BookStore-UI/_Imports.razor
+++ b/BookStore-UI/_Imports.razor
@@ -7,3 +7,8 @@
 @using Microsoft.JSInterop
 @using BookStore_UI
 @using BookStore_UI.Shared
+
+@using BookStore_UI.Models
+@using BookStore_UI.Contracts
+
+@using BookStore_UI.Static
