--- a/BookStore-UI/Shared/NavMenu.razor
+++ b/BookStore-UI/Shared/NavMenu.razor
@@ -30,7 +30,7 @@
         <AuthorizeView>
             <Authorized>
                 <li class="nav-item px-3">
-                    <NavLink class="nav-link" href="authors">
+                    <NavLink class="nav-link" href="authors/">
                         <span class="oi oi-plus" aria-hidden="true"></span> Authors
                     </NavLink>
                 </li>
