--- a/BookStore-UI/Shared/NavMenu.razor
+++ b/BookStore-UI/Shared/NavMenu.razor
@@ -35,7 +35,7 @@
                     </NavLink>
                 </li>
                 <li class="nav-item px-3">
-                    <NavLink class="nav-link" href="books">
+                    <NavLink class="nav-link" href="books/">
                         <span class="oi oi-book" aria-hidden="true"></span> Books
                     </NavLink>
                 </li>
