--- a/BookStore-UI/Pages/Authors/View.razor
+++ b/BookStore-UI/Pages/Authors/View.razor
@@ -12,45 +12,48 @@
 }
 else
 {
-    <div class="col-md-4">
-        <table class="table table-responsive">
-            <tr>
-                <td>  First Name  </td>
-                <td>  @authModel.Firstname  </td>
-            </tr>
-            <tr>
-                <td>  Last Name  </td>
-                <td>  @authModel.Lastname  </td>
-            </tr>
-            <tr>
-                <td>  Biography </td>
-                <td>  @authModel.Bio  </td>
-            </tr>
+<div class="col-md-4">
+    <table class="table table-responsive">
+        <tr>
+            <td>  First Name  </td>
+            <td>  @authModel.Firstname  </td>
+        </tr>
+        <tr>
+            <td>  Last Name  </td>
+            <td>  @authModel.Lastname  </td>
+        </tr>
+        <tr>
+            <td>  Biography </td>
+            <td>  @authModel.Bio  </td>
+        </tr>
 
-        </table>
-        @if (authModel.Books == null || authModel.Books.Count < 1)
-        {
+    </table>
+    @if (authModel.Books == null || authModel.Books.Count < 1)
+    {
 
-            <LoadingMessage Message="No book(s) data available for the author...." />
-        }
-        else
-        {
+        <LoadingMessage Message="No book(s) data available for the author...." />
+    }
+    else
+    {
 
 
-            <div class="card" style="width: 18rem;">
-                <div class="card-header">
-                    My Books
-                </div>
-                <ul class="list-group list-group-flush">
-                    @foreach (var book in authModel.Books)
-                    {
-                        <li class="list-group-item">@book.Title - @book.Price</li>
-                    }
 
-                </ul>
+        <td></td>
+
+        <div class="card" style="width: 18rem;">
+            <div class="card-header">
+                My Books
             </div>
-        }
-    </div>
+            <ul class="list-group list-group-flush">
+                @foreach (var book in authModel.Books)
+                {
+                <li class="list-group-item">@book.Title - @string.Format(indCul, "{0:C}", @book.Price)</li>
+                }
+
+            </ul>
+        </div>
+    }
+</div>
 }
 <button @onclick="BackToList" class="btn btn-outline-secondary"><span class="oi oi-media-skip-backward"></span> Back to list</button>
 @code {
@@ -58,6 +61,7 @@ else
     public string Id { get; set; }
 
     private Author authModel = new Author();
+    private CultureInfo indCul = new CultureInfo("hi-IN");
     protected async override Task OnInitializedAsync()
     {
         int id = Convert.ToInt32(Id);
