--- a/BookStore-UI/Shared/NavMenu.razor
+++ b/BookStore-UI/Shared/NavMenu.razor
@@ -11,9 +11,12 @@
         <AuthorizeView>
             <Authorized>
                 <li class="nav-item px-3">
-                    <NavLink class="nav-link">
-                        <span class="oi oi-person" aria-hidden="true"></span> @context.User.Identity.Name
-                    </NavLink>
+                    <div class="navbar nav-justified=">
+                        <img src="/GeneralImages/login-image.jpg" width="150"  class="rounded-circle float-none align-content-md-center">
+                    </div>
+           
+
+                    <NavLink class="nav-link"> @context.User.Identity.Name  </NavLink>
                 </li>
                 <li class="nav-item px-3">
                     <NavLink class="nav-link" href="logout">
