--- a/BookStore-UI/Pages/Index.razor
+++ b/BookStore-UI/Pages/Index.razor
@@ -4,7 +4,7 @@
 
 
 <div style="max-width: 850px; margin: 0px auto; font: 300 1.1em / 1.5 Helvetica, Verdana, sans-serif; text-align: left;">
-    <img src="/GeneralImages/footer-orange-900-2019.jpg"  />
+    <img src="/GeneralImages/footer-orange-900-2019.jpg" class="img-fluid"  />
     <br />
     <br />
     <br />
