--- a/BookStore-UI/Shared/NavMenu.razor
+++ b/BookStore-UI/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
     <a class="navbar-brand" href="">DeepRoots Book Store</a>
-    <button class="navbar-toggler" @onclick="ToggleNavMenu">
+    <button class="navbar-toggler"  @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
 </div>
@@ -10,14 +10,16 @@
 
         <AuthorizeView>
             <Authorized>
-                <li class="nav-item px-3">
-                    <div class="navbar nav-justified=">
-                        <img src="/GeneralImages/login-image.jpg" width="150"  class="rounded-circle float-none align-content-md-center">
+                <li class="nav-item px-5">
+                    <div class="navbar align-content-md-center">
+                        <img src="/GeneralImages/login-image.jpg" width="90" class="rounded-circle float-none align-content-md-center">
                     </div>
-           
-
-                    <NavLink class="nav-link"> @context.User.Identity.Name  </NavLink>
                 </li>
+                
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" > @context.User.Identity.Name   </NavLink>
+                </li>
+
                 <li class="nav-item px-3">
                     <NavLink class="nav-link" href="logout">
                         <span class="oi oi-account-logout" aria-hidden="true"></span> Logout
