--- a/BookStore-UIWA.WASM/Shared/MainLayout.razor
+++ b/BookStore-UIWA.WASM/Shared/MainLayout.razor
@@ -1,19 +1,23 @@
 ﻿@inherits LayoutComponentBase
 
+<BlazoredToasts />
+
 
 <div class="page">
-    @* class page added for dotnet version5 *@
-<BlazoredToasts />
-<div class="sidebar">
-    <NavMenu />
-</div>
-<div class="main">
-    <div class="top-row px-4">
-        <a href="http://blazor.net" target="_blank" class="ml-md-auto">About</a>
+    <div class="sidebar">
+        <NavMenu />
     </div>
+    <div class="main">
+        <div class="top-row px-4">
+            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+        </div>
+        <div class="content px-4 mt-6">
+            <div class="card">
+                <div class="card-body">
+                    @Body
+                </div>
+            </div>
+        </div>
 
-    <div class="content px-4">
-        @Body
     </div>
-</div>
 </div>
