--- a/BookStore-UIWA.WASM/Shared/NavMenu.razor
+++ b/BookStore-UIWA.WASM/Shared/NavMenu.razor
@@ -14,8 +14,8 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </li>
-       @*<AuthorizeView>
-            <Authorized>*@
+       <AuthorizeView>
+            <Authorized>
                 <li class="nav-item px-3">
                     <NavLink class="nav-link" href="authors/">
                         <span class="oi oi-plus" aria-hidden="true"></span> Authors
@@ -26,18 +26,18 @@
                         <span class="oi oi-book" aria-hidden="true"></span> Books
                     </NavLink>
                 </li>
-            @*</Authorized>
-            <NotAuthorized>*@
+            </Authorized>
+            <NotAuthorized>
                 <li class="nav-item px-3">
                     <NavLink class="nav-link" href="login">
                         <span class="oi oi-account-login" aria-hidden="true"></span> Sign In
                     </NavLink>
                 </li>
-            @*</NotAuthorized>
+            </NotAuthorized>
 
-        </AuthorizeView>*@
+        </AuthorizeView>
 
-        @*<AuthorizeView Roles="Administrator">*@
+        <AuthorizeView Roles="Administrator">
             <li class="nav-item px-3">
                 <NavLink class="nav-link" href="register">
                     <span class="oi oi-person" aria-hidden="true"></span> Register User
@@ -49,14 +49,14 @@
                     <span class="oi oi-list-rich" aria-hidden="true"></span> ADMIN LINK
                 </NavLink>
             </li>
-        @*</AuthorizeView>*@
-        @*<AuthorizeView Roles="Customer">*@
+        </AuthorizeView>
+        <AuthorizeView Roles="Customer">
             <li class="nav-item px-3">
                 <NavLink class="nav-link" href="books">
                     <span class="oi oi-list-rich" aria-hidden="true"></span> CUSTOMER LINK
                 </NavLink>
             </li>
-        @*</AuthorizeView>*@
+        </AuthorizeView>
 
 
     </ul>
